# simd-lex

./: CMakeLists.txt  README.md  ascii_determiner.cpp  lexer.c  main.c  tokens.h
data/: hello_world.c
include/: CppTokenArray.h  aligned_vector.hpp
src/: CppTokenArray.cpp
